[package]
name = "wusheng-pool-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
json-rpc-types = "1.0.3"
serde = "1.0.140"
serde_json = "1.0.82"
erased-serde = "0.3.21"
bytes = "1.1.0"
anyhow = "1.0.57"
log = "0.4.17"
log4rs = "1.1.1"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
snarkvm = "0.8.0"
futures = "0.3.21"
futures-util = "0.3.21"
tokio-util = {version = "0.7.1", features = ["codec"]}
tokio-stream = "0.1.8"
snarkos = "2.0.2"