[package]
name = "wusheng-pool-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
json-rpc-types = "1.0.3"
serde = "1"
serde_json = "1"
erased-serde = "0.3.21"
bytes = "1.1.0"
anyhow = "1.0.57"
log = "0.4.17"
log4rs = "1.1.1"
rand = "0.8.5"
rayon = "1.5"
ansi_term = "0.12.1"

tokio = { version = "1", features = ["full"] }

futures = "0.3.21"
futures-util = "0.3.21"
tokio-util = {version = "0.7.1", features = ["codec"]}
tokio-stream = "0.1.8"
#snarkos = "2.0.2"

snarkvm = {git = "https://github.com/AleoHQ/snarkVM.git",  rev = "b2cee23", features = ["circuit", "console", "parallel", "rest", "utilities", "algorithms"]}